<resources>
    <string name="app_name">Five Contacts</string>
    <string name="welcome">Bem Vindo!</string>
    <string name="new_user">Novo Usuário</string>
    <string name="update_user_profile">Atualizar Perfil</string>
    <string name="pick_contacts">Selecione os Contatos</string>
    <string name="login">Login</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="keep_connected">Lembrar minha conta</string>
    <string name="log_in">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="save">Salvar</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="change_contact_list">Mudar Lista de Contatos</string>
    <string name="call">Ligar</string>
    <string name="cancel">Cancelar</string>
    <string name="call_contact">Ligue para um contato</string>
    <string name="login_or_password_incorrect">Login/Senha Incorreto(s)</string>
    <string name="login_or_password_null">Login/Senha Nulo(s)</string>
    <string name="select">Selecione</string>
    <string name="necessary_access_contacts">Acesso necessário aos contatos</string>
    <string name="allow_access_contact">Por favor, permita o acesso à lista de contatos</string>
    <string name="disable_access_contact">Você desabilitou o acesso à lista de contatos</string>
    <string name="necessary_access_phone">Acesso necessário aos telefone</string>
    <string name="allow_access_phone">Por favor, permita o acesso ao telefone</string>
    <string name="max_number_contacts_selected">Quantidade máxima de contatos selecionados</string>
    <string name="user_successfully_registered">Usuário cadastrado com sucesso</string>
    <string name="empty_field">Existe algum campo vazio</string>
    <string name="null_field">Existe algum campo nulo</string>
</resources>