<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.59" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_horizontal_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_user_profile"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_1" />

    <EditText
        android:id="@+id/nameRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.10"
        android:background="@color/colorSecondary"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorSecondary"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_3" />

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.10"
        android:background="@color/colorSecondary"
        android:ems="10"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorSecondary"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_4" />

    <EditText
        android:id="@+id/loginRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.10"
        android:background="@color/colorSecondary"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorSecondary"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_5" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.10"
        android:background="@color/colorSecondary"
        android:ems="10"
        android:inputType="text"
        android:text="@string/password"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorSecondary"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_6" />

    <Switch
        android:id="@+id/keepConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_connected"
        android:showText="false"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/guide_vertical_2"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_7" />

    <Button
        android:id="@+id/updateUserProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.085"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_8" />

    <Button
        android:id="@+id/cancelUpdateUserProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.70"
        app:layout_constraintHeight_percent="0.085"
        android:background="@color/colorSecondary"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_horizontal_9" />

</androidx.constraintlayout.widget.ConstraintLayout>